--- a/styles/porfoliio.css
+++ b/styles/porfoliio.css
@@ -95,6 +95,9 @@ main{
     max-width: 1140px;
     margin:0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 .about-info-container{
     display: flex;
     justify-content: space-around
@@ -103,6 +106,53 @@ main{
 .about-info{
     text-align: center;
 }
+/* skills related style */
 #What-i-do-description{
     padding:30px 150px;
 }
+.skills-container{
+    display: flex;
+    gap:24px;
+}
+.skill{
+    padding: 30px;
+    gap: 24px;
+    border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+/* Resume Section style */
+.resume-coloumn-title{
+    color: #474747;
+font-size: 30px;
+font-weight: 700;
+}
+.resume-container{
+display: flex;
+gap: 50px;
+}
+.resume-item-institute, .resume-item-description{
+
+    color: #757575;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-title{
+    color:  #474747;
+font-size: 25px;
+font-weight: 700;
+margin-bottom: 10px;
+}
+.resume-container hr{
+    margin:30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+
